# bioacme

./: .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml
CMakeModules/: FindBZ2.cmake  FindLIBSBML.cmake  FindLIBXML.cmake  FindZLIB.cmake  LibFindMacros.cmake
acme/: __init__.py  __main__.py
bioacme/: __init__.py  __main__.py
examples/birth-death/: init_bd40.txt  mBirthDeath_P1.xml  parseResult-X.pl  plotls-nozlim-tabX-cl.R  states_BFS.txt  states_DFS.txt  steady_BFS.txt  steady_DFS.tab  steady_DFS.tab.eps  steady_DFS.txt  tm_BFS.txt  tm_DFS.txt
examples/birth-death/dynamics/: dyn000000.txt  dyn000001.txt  dyn000002.txt  dyn000003.txt  dyn000004.txt  dyn000005.txt  dyn000006.txt  dyn000007.txt  dyn000008.txt  dyn000009.txt  dyn000010.txt
examples/scripts/: README.txt  parseResult-ES.pl  parseResult-all.pl  plotls-nozlim-tabXY-cl.R  plotls-zlim-tabXY-cl.R
examples/toggle-switch/: init300.txt  mToggle-p2-b200k.xml  parseResult-XY.pl  plotls-nozlim-tabXY-cl.R  states_DFS.txt  steady_DFS.tab  steady_DFS.tab-nozlim.eps  steady_DFS.txt
fbsdcme/: __init__.py  __main__.py
src/BioModel/: CMakeLists.txt  HashTable.cpp  HashTable.h  InitialConds.cpp  InitialConds.h  MatrixElement.cpp  MatrixElement.h  Network.cpp  Network.h  Queue.cpp  Queue.h  SLinkedList.cpp  SLinkedList.h  SparseMatrix.cpp  SparseMatrix.h  Stack.cpp  Stack.h  State.cpp  State.h  StateSpace.cpp  StateSpace.h  StateType.h  Stoichiometry.cpp  Stoichiometry.h
src/SOR/: CMakeLists.txt  ssor.cpp
src/buildStateSpace/: CMakeLists.txt  README.statespace  buildStateSpace_BFS.cpp  buildStateSpace_DFS.cpp
src/mxexp/: CMakeLists.txt  dgexpv.f  mataid.f  mxexp.f
src/net2matrix/: CMakeLists.txt  Makefile  README  net2matrix.cpp
tests/: test_fbsdcme.py
