[tool.poetry]
name = "bioacme"
version = "0.1.0"
description = ""
authors = [
    "João Carlos Rodrigues Jr. <jc.rodrigues1997@gmail.com>",
    "Hendrik Dumith Louzada <hendriklouzada@gmail.com>"
]
include = [{ path = "bioacme/bin/*", format = ["sdist", "wheel"]}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "cmake"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build_state_space_bfs = "bioacme.__main__:build_state_space_bfs"
build_state_space_dfs = "bioacme.__main__:build_state_space_dfs"
mxexp = "bioacme.__main__:mxexp"
net_2_matrix = "bioacme.__main__:net_2_matrix"
ssor = "bioacme.__main__:ssor"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"
